[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/Main.gd" type="Script" id=2]
[ext_resource path="res://resources/sprites/ui/titulo.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/ui/background_table.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/ui/9patch.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/Title.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/Menu.gd" type="Script" id=7]
[ext_resource path="res://resources/fonts/Nefthypos-Regular-Complete.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/sprites/platypusheavy/Duke_running_FW5.Png" type="Texture" id=9]
[ext_resource path="res://resources/sprites/platypusheavy/Duke_running_FW4.Png" type="Texture" id=10]
[ext_resource path="res://resources/sprites/platypusheavy/Duke_running_FW2.Png" type="Texture" id=11]
[ext_resource path="res://resources/sprites/platypusheavy/Duke_running_FW3.Png" type="Texture" id=12]
[ext_resource path="res://resources/sprites/ui/9patchl.png" type="Texture" id=13]
[ext_resource path="res://resources/sprites/ui/9patchr.png" type="Texture" id=14]

[sub_resource type="AnimatedTexture" id=1]
frames = 4
fps = 10.0
frame_0/texture = ExtResource( 11 )
frame_1/texture = ExtResource( 12 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 9 )
frame_3/delay_sec = 0.0

[sub_resource type="StyleBoxLine" id=2]
grow_begin = -3.0
grow_end = -3.0
thickness = 2
vertical = true

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 8 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 970.0
margin_bottom = 540.0
texture = ExtResource( 4 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -270.0
margin_right = 485.0
margin_bottom = 270.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="Main"]
margin_left = 336.0
margin_top = 51.0
margin_right = 633.0
margin_bottom = 489.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Main/Main"]
margin_right = 297.0
margin_bottom = 254.0
rect_min_size = Vector2( 297, 254 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Story" type="Button" parent="Main/Main"]
margin_left = 73.0
margin_top = 269.0
margin_right = 223.0
margin_bottom = 289.0
rect_min_size = Vector2( 150, 20 )
size_flags_horizontal = 4
text = "Story mode"

[node name="Endless" type="Button" parent="Main/Main"]
margin_left = 73.0
margin_top = 304.0
margin_right = 223.0
margin_bottom = 324.0
rect_min_size = Vector2( 150, 20 )
size_flags_horizontal = 4
text = "Endless mode"

[node name="TextBox" type="HBoxContainer" parent="Main/Main"]
margin_top = 339.0
margin_right = 297.0
margin_bottom = 403.0
custom_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Main/Main/TextBox"]
margin_left = 3.0
margin_right = 12.0
margin_bottom = 64.0
texture = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="Main/Main/TextBox"]
margin_left = 12.0
margin_right = 284.0
margin_bottom = 64.0

[node name="TextureRect3" type="TextureRect" parent="Main/Main/TextBox/MarginContainer"]
margin_right = 272.0
margin_bottom = 64.0
texture = ExtResource( 5 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Main/TextBox/MarginContainer"]
margin_right = 272.0
margin_bottom = 64.0

[node name="TextureRect4" type="TextureRect" parent="Main/Main/TextBox/MarginContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 64.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Main/Main/TextBox/MarginContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 68.0
margin_bottom = 64.0
custom_styles/separator = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Main/Main/TextBox/MarginContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 272.0
margin_bottom = 64.0
rect_min_size = Vector2( 200, 0 )

[node name="TextEdit" type="TextEdit" parent="Main/Main/TextBox/MarginContainer/HBoxContainer/CenterContainer"]
margin_left = 4.0
margin_top = 19.0
margin_right = 194.0
margin_bottom = 44.0
rect_min_size = Vector2( 190, 25 )
text = "Pick your poison!"
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Main/Main/TextBox"]
margin_left = 284.0
margin_right = 293.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Quit" type="Button" parent="Main/Main"]
margin_left = 73.0
margin_top = 418.0
margin_right = 223.0
margin_bottom = 438.0
rect_min_size = Vector2( 150, 20 )
size_flags_horizontal = 4
text = "Quit"

[node name="Title" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Transition" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Transition"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Transition/CenterContainer"]
margin_left = 235.0
margin_top = 65.0
margin_right = 735.0
margin_bottom = 474.0
custom_constants/separation = 40

[node name="TextEdit" type="TextEdit" parent="Transition/CenterContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 350.0
rect_min_size = Vector2( 500, 350 )
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
text = "A long, long time ago, so long that no one remembers it -not even your humble narrator, who is reading it, amazed, in an old manuscript that he just found.. err where was I..-, there was a song. Whoever possessed it would gain supreme power that would make his enemies despair.

But the song was broken into 4 pieces and lost. (Probably at a rave, or afterwards during the hangover )

A badass platypus without name, the chosen of the gods of Metal, is now trying to find the four cassetes and make the song whole again. He, covered in sweat, blood and beer, will stop at nothing and is willing to rip the pieces from the cold dead hands of his enemies. He is looking forward to it actually."
readonly = true
wrap_enabled = true

[node name="Label" type="Label" parent="Transition/CenterContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 500.0
margin_bottom = 409.0
custom_fonts/font = SubResource( 3 )
text = "Press click to kick ass"
align = 1
[connection signal="mouse_entered" from="Main/Main/Story" to="Main" method="_on_Story_mouse_entered"]
[connection signal="mouse_exited" from="Main/Main/Story" to="Main" method="default_explanation"]
[connection signal="pressed" from="Main/Main/Story" to="Main" method="_on_Story_pressed"]
[connection signal="mouse_entered" from="Main/Main/Endless" to="Main" method="_on_Endless_mouse_entered"]
[connection signal="mouse_exited" from="Main/Main/Endless" to="Main" method="default_explanation"]
[connection signal="pressed" from="Main/Main/Endless" to="Main" method="_on_Endless_pressed"]
[connection signal="mouse_entered" from="Main/Main/Quit" to="Main" method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Main/Main/Quit" to="Main" method="default_explanation"]
[connection signal="pressed" from="Main/Main/Quit" to="Main" method="_on_Quit_pressed"]
